<?xml version="1.0" encoding="utf-8"?>
<resources>

    //App files
    <string name="app_name">Hue Calendar</string>
    <color name="background">#ffffff</color>

    //Activities
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="calendar">Calendar View</string>
    <string name="light_bulbs">Light Bulbs</string>
    <string name="event_detail">Event Info</string>
    <string name="event_addition">Event Addition</string>
    <string name="hue_functions">Test Functions</string>
    <string name="home_activity">Home Activity</string>
    <string name="push_link">Push Link</string>
    <string name="tag_activity">Tags</string>

    //Buttons
    <string name="done_button">Done</string>
    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="lighton">On</string>
    <string name="lightoff">Off</string>
    <string name="imgbutton1">Bedroom Main</string>
    <string name="imgbutton2">Bedroom Side</string>
    <string name="imgbutton3">Nightstand </string>
    <string name="imgbutton4">Dining Room</string>
    <string name="imgbutton5">Kitchen</string>
    <string name="imgbutton6">Accent</string>
    <string name="imgbutton7">Desk</string>
    <string name="imgbutton8">Family Room</string>
    <string name="imgbutton9">Reading</string>
    <string name="imgbutton10">Porch</string>
    <string name="imgbutton11">Foyer</string>
    <string name="imgbutton12">Office</string>
    <string name="backbutton">Back</string>

    //Hue Strings
    <string name="no_bridge">No Bridge Found.   Start Bridge Search</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_find_bridge">Find new bridge</string>
    <string name="btn_random">Random Lights</string>
    <string name="search_progress">Searching ...</string>
    <string name="connecting">Connecting ...</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_could_not_connect">No connection</string>
    <string name="txt_click_random_button">Click the Random Lights Button to set your lamps to random colours.</string>
    <string name="could_not_find_bridge">Hue cannot find your bridge. Please check that it is connected to the same Wi-Fi router as your app and press</string>
    <string name="btn_more">More</string>
    <string name="btn_reconnect">Reconnect</string>
    <string name="enter_light_name">Enter light name</string>
    <string name="txt_sdk_version">SDK Version</string>
    <string name="menu_find_bridge">Find new Bridge</string>
    <string name="menu_refresh">Refresh</string>
    <string name="btn_retry">Retry</string>
    <string name="searching_for_bridges">Searching for Bridges</string>
    <string name="txt_selectbridges">Available Access Points</string>
    <string name="txt_pushlink">Pushlink</string>
    <string name="press_pushlink_button">Press the link button on the bridge</string>
    <string name="txt_select_smartbridge">Please select a bridge to use for this app</string>
    <string name="title_error">Error</string>
    <string name="txt_last_heartbeat">Last Heartbeat : </string>

    //Event Addtion
    <string name="buttonadd">Add</string>
    <string name="buttoncancel">Cancel</string>
    <string name="askDate">Start Date</string>
    <string name="pickDate">Pick a Date</string>
    <string name="askDate2">End Date</string>
    <string name="pickTime">Pick a Time</string>
    <string name="askTime">Start Time</string>
    <string name="askTime2">End Time</string>
    <string name="tagField">Tag</string>
    <string name="repeatField">Repeat</string>

    //Activity_bulb_detail
    <string name="bulb">Bulb</string>
    <string name="onoff">On/Off</string>

    <string name="color_picker">Color Picker</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
