<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16pt"
        android:fontFamily="Helvetica"
        android:id="@+id/name"
        android:layout_centerHorizontal="true"
        android:text="Work"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:id="@+id/time">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:fontFamily="Helvetica"
            android:id="@+id/from"
            android:layout_centerHorizontal="true"
            android:text=" From "
            android:layout_below="@id/name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:fontFamily="Helvetica"
            android:id="@+id/startTime"
            android:layout_centerHorizontal="true"
            android:text="12"
            android:layout_below="@id/name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:fontFamily="Helvetica"
            android:id="@+id/sep"
            android:layout_centerHorizontal="true"
            android:text=":"
            android:layout_below="@id/name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:fontFamily="Helvetica"
            android:id="@+id/startMin"
            android:layout_centerHorizontal="true"
            android:text="30"
            android:layout_below="@id/name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:fontFamily="Helvetica"
            android:id="@+id/startAMPM"
            android:layout_centerHorizontal="true"
            android:text="PM"
            android:layout_below="@id/name"
            android:layout_marginLeft="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:fontFamily="Helvetica"
            android:id="@+id/to"
            android:layout_centerHorizontal="true"
            android:text=" to "
            android:layout_below="@id/name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:fontFamily="Helvetica"
            android:id="@+id/endTime"
            android:layout_centerHorizontal="true"
            android:text="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:fontFamily="Helvetica"
            android:id="@+id/sep2"
            android:layout_centerHorizontal="true"
            android:text=":"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:fontFamily="Helvetica"
            android:id="@+id/endMin"
            android:layout_centerHorizontal="true"
            android:text="30"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:fontFamily="Helvetica"
            android:id="@+id/endAMPM"
            android:layout_centerHorizontal="true"
            android:text="PM"
            android:layout_below="@id/name"
            android:layout_marginLeft="2dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:fontFamily="Helvetica"
        android:id="@+id/busy"
        android:layout_centerHorizontal="true"
        android:text="Busy"
        android:layout_below="@id/time"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15pt"
        android:fontFamily="Helvetica"
        android:id="@+id/bulbs"
        android:layout_centerHorizontal="true"
        android:text="Affected Bulbs"
        android:layout_below="@id/busy"
        android:layout_marginBottom="10dp"
        android:textStyle="bold|italic"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topRow"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/bulbs">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/firstBulb"
            android:layout_weight="0.33"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imgbutton1"
                android:id="@+id/label1"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="9pt"
                android:textStyle="bold"
                android:layout_below="@+id/imageButton"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/secondBulb"
            android:layout_weight="0.33">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton2"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imgbutton2"
                android:id="@+id/label2"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textSize="9pt"
                android:textStyle="bold"
                android:layout_below="@+id/imageButton2"/>



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/thirdBulb"
            android:layout_weight="0.33"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton3"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imgbutton3"
                android:id="@+id/label3"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textSize="9pt"
                android:textStyle="bold"
                android:layout_below="@+id/imageButton3"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/middleRow"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/topRow">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/forthBulb"
            android:layout_weight="0.33"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton4"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imgbutton4"
                android:id="@+id/label4"
                android:gravity="center"
                android:textSize="9pt"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/imageButton4"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fifthBulb"
            android:layout_weight="0.33">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton5"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imgbutton5"
                android:id="@+id/label5"
                android:gravity="center"
                android:textSize="9pt"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/imageButton5"/>



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sixthBulb"
            android:layout_weight="0.33"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton6"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imgbutton6"
                android:id="@+id/label6"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="9pt"
                android:textStyle="bold"
                android:layout_below="@+id/imageButton6"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/middleRow"
    android:layout_centerHorizontal="true"
    android:layout_margin="15dp"
        android:layout_alignParentBottom="true">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_button"
        android:id="@+id/doneButton"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"
        android:id="@+id/editButton"
        android:layout_marginLeft="10dp"/>


</LinearLayout>

</RelativeLayout>
